--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
+
+spring.application.name=paypal
+
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
+server.port=0
